@@ -1,3 +1,8 @@
+2006-07-13  Scott Smedley <ss@aa.gov.au>
+
+	* documentation/faq/index.php:
+	updated FAQ
+
 2006-04-02  Mikhael Goikhman  <migo@homemail.com>
 
 	* index.php:
